Refactor the code : cambia nombre de rutina a cliente no pago, anadir adapter para cliente no pago y adapter para un mejor comprension del codigo

--- a/src/main/res/layout/cliente_no_pago_list.xml
+++ b/src/main/res/layout/cliente_no_pago_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".Activities.rutinaListActivity"
-    tools:listitem="@layout/rutinas_list_content" />
+    tools:context=".Activities.clienteNoPagoActivity"
+    tools:listitem="@layout/cliente_no_pago_list_content" />
