--- a/src/main/res/layout-w900dp/cliente_no_pago_list.xml
+++ b/src/main/res/layout-w900dp/cliente_no_pago_list.xml
@@ -10,7 +10,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context=".Activities.rutinaListActivity">
+    tools:context=".Activities.clienteNoPagoActivity">
 
     <!--
     This layout is a two-pane layout for the Items
@@ -27,8 +27,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.example.almonte.Activities.rutinaListActivity"
-        tools:listitem="@layout/rutinas_list_content" />
+        tools:context="com.example.almonte.Activities.clienteNoPagoActivity"
+        tools:listitem="@layout/cliente_no_pago_list_content" />
 
     <FrameLayout
         android:id="@+id/item_detail_container"
