--- a/src/main/res/layout/activity_cliente_no_pago.xml
+++ b/src/main/res/layout/activity_cliente_no_pago.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Activities.rutinaListActivity">
+    tools:context=".Activities.clienteNoPagoActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -27,7 +27,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/rutina_list" />
+        <include layout="@layout/cliente_no_pago_list" />
     </FrameLayout>
 
 
