--- a/src/main/res/layout/activity_pago_detail.xml
+++ b/src/main/res/layout/activity_pago_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Activities.rutinasDetailActivity"
+    tools:context=".Activities.pagoDetailActivity"
     tools:ignore="MergeRootFrame">
 
     <com.google.android.material.appbar.AppBarLayout
