--- a/src/main/res/layout/cliente_no_pago_list_content.xml
+++ b/src/main/res/layout/cliente_no_pago_list_content.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:background="#31666666"
-    android:orientation="vertical"
-    android:layout_marginTop="10dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,17 +46,17 @@
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             android:text="$Rd 1000"
+            android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="#CA0F0F"
             android:textSize="22sp"
-            android:textStyle="bold"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/cedula_cliente"
@@ -104,8 +103,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="left">
+        android:gravity="left"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/fecha_hoy"
@@ -126,26 +125,26 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp">
 
-    <Button
-        android:id="@+id/btnPagar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pagar"
-        android:layout_marginLeft="16dp"/>
+        <Button
+            android:id="@+id/btnPagar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:text="Pagar" />
 
-    <Button
-        android:id="@+id/btnRendimiento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rendimiento"
-        android:layout_marginLeft="16dp"/>
+        <Button
+            android:id="@+id/btnRendimiento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:text="Rendimiento" />
 
-    <Button
-        android:id="@+id/btnVerCliente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ver Cliente"
-        android:layout_marginLeft="10dp"/>
+        <Button
+            android:id="@+id/btnVerCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Ver Cliente" />
 
     </LinearLayout>
 
