--- a/src/main/res/layout/cliente_no_pago_list.xml
+++ b/src/main/res/layout/cliente_no_pago_list.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginTop="100dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".Activities.clienteNoPagoActivity"
     tools:listitem="@layout/cliente_no_pago_list_content" />
