--- a/src/main/res/layout/activity_lista_prestamo.xml
+++ b/src/main/res/layout/activity_lista_prestamo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Fragments.ListaPrestamoFragment">
+    tools:context=".Activities.ListaPrestamoActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="55dp"
+            android:layout_marginBottom="55dp"
             android:text="Buscar" />
 
 
