--- a/src/main/res/layout/lista_prestamo_content.xml
+++ b/src/main/res/layout/lista_prestamo_content.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:background="#31666666"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Fragments.ListaPrestamoFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,6 +21,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
+            android:text="Yves Gervens"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -31,9 +34,18 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="@dimen/text_margin"
             android:layout_marginBottom="5dp"
+            android:text="Constant"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/monto_deuda"
@@ -41,73 +53,34 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/text_margin"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
+            android:text="2000 $RD"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="#CA0F0F"
             android:textSize="22sp"
             android:textStyle="bold" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/cedula_cliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginBottom="5dp"
-            android:textAppearance="?attr/textAppearanceListItem" />
-
-        <TextView
-            android:id="@+id/telefono_cliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginBottom="5dp"
-            android:textAppearance="?attr/textAppearanceListItem" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
         <TextView
             android:id="@+id/ubicacion_cliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="@dimen/text_margin"
             android:layout_marginBottom="5dp"
+            android:text="Plan 13 pasos"
             android:textAppearance="?attr/textAppearanceListItem" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="left"
-        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/fecha_hoy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="@dimen/text_margin"
             android:layout_marginBottom="10dp"
+            android:text="02-03-2020 "
             android:textAppearance="?attr/textAppearanceListItem" />
 
     </LinearLayout>
@@ -116,36 +89,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:gravity="center">
+
 
         <Button
-            android:id="@+id/btnPagar"
-            android:layout_width="wrap_content"
+            android:id="@+id/btndetalle"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Pagar" />
-
-        <Button
-            android:id="@+id/btnRendimiento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Rendimiento" />
-
-        <Button
-            android:id="@+id/btnVerCliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="16dp"
             android:text="Detalle" />
 
         <Button
-            android:id="@+id/btnNoPago"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnPagar"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="No pago"
-            android:textColor="#921515" />
+            android:layout_marginLeft="16dp"
+            android:text="Pagar" />
 
     </LinearLayout>
 
